[tool.poetry]
name = "repl_python3_Botan-Bot"
version = "0.1.0"
description = ""
authors = ["Us3r100 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
youtube-dl = "^2021.4.17"
waiting = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
